# CollettTesting

./: .gitignore  CMakeLists.txt  README.md
assets/: icons.qrc
docs/: textformat.md
i18n/: collett_en_US.ts  collett_nb_NO.ts
qt6/: build.sh  deb_depend.sh
sample/: nwProject.bak  nwProject.nwx  project.collett
sample/cache/: prevBuild.json
sample/content/: 21d442ad-9ecc-4540-89d3-781881d1e089.ctxt  2bbe6147-1cde-4932-8831-ac543231f4a9.ctxt  30d4a422-12ab-40f4-9408-bf17ab229cff.ctxt  62900e30-ba27-49ee-ab37-863d2e6cd02d.ctxt  964b9a9e-5b5d-4591-8d3a-e16efaa1906b.ctxt  ec373dd8-fd14-401f-8c75-535ea96e4db6.ctxt
sample/meta/: guiOptions.json  tagsIndex.json  wordlist.txt
src/: collett.h  config.cpp  config.h  constants.h  data.cpp  data.h  guimain.cpp  guimain.h  main.cpp  settings.cpp  settings.h
src/core/: core.h  item.cpp  item.h  project.cpp  project.h  projxmlreader.cpp  projxmlreader.h
src/document/: coldocblock.cpp  coldocblock.h  coldocfragment.cpp  coldocfragment.h  collettdocparser.cpp  collettdocparser.h  document.cpp  document.h  documentblock.cpp  documentblock.h  documentstore.cpp  documentstore.h  linefmt.cpp  linefmt.h
src/editor/: doceditor.cpp  doceditor.h  docexporter.cpp  docexporter.h  docimporter.cpp  docimporter.h  editarea.cpp  editarea.h  fragmentedit.cpp  fragmentedit.h  sceneedit.cpp  sceneedit.h
src/gui/: mainmenu.cpp  mainmenu.h  maintoolbar.cpp  maintoolbar.h  noveltree.cpp  noveltree.h  noveltreedelegate.cpp  noveltreedelegate.h  statusbar.cpp  statusbar.h
src/gui/elements/: docdetails.cpp  docdetails.h  doceditor.cpp  doceditor.h  doctree.cpp  doctree.h  docviewer.cpp  docviewer.h  noticebar.cpp  noticebar.h  noveltree.cpp  noveltree.h  searchbar.cpp  searchbar.h  viewdetails.cpp  viewdetails.h
src/project/: item.cpp  item.h  project.cpp  project.h  projectmodel.cpp  projectmodel.h  projecttree.cpp  projecttree.h  storyitem.cpp  storyitem.h  storymodel.cpp  storymodel.h  storytree.cpp  storytree.h
src/tools/: textutils.cpp  textutils.h
